# lean-autoformalizer

./: .gitignore  Autoformalizer.lean  Makefile  README.md  Roadmap.md  lakefile.toml  pyproject.toml
.github/workflows/: lean_action_ci.yml  static-checks.yml  tests.yml
Autoformalizer/: Basic.lean
Autoformalizer/CLI/: Main.lean
datasets/: dev.jsonl  mini.jsonl  test.jsonl  train.jsonl
datasets/splits/: mini_test.jsonl
docs/: ARCHITECTURE.md  ExecutorLoop.md
scripts/: bootstrap_python.sh  check_lean.sh  create_splits.py  demo_decode.py  demo_phase3.py  validate_dataset.py
src/autoformalizer/: __init__.py  cli.py  executor.py
src/autoformalizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/autoformalizer/config/: __init__.py  defaults.yaml  models.py
src/autoformalizer/datasets/: __init__.py  loader.py  schemas.py
src/autoformalizer/decode/: __init__.py  decode.py  openrouter.py
src/autoformalizer/evals/: __init__.py  evaluate.py  metrics.py
src/autoformalizer/executor/: __init__.py  beam.py  cache.py  errors.py  lean.py  loop.py
tests/: test_cli_decode.py  test_cli_evaluate.py  test_executor.py
tests/datasets/: __init__.py  test_loader.py  test_schemas.py
tests/decode/: __init__.py  test_decode.py  test_openrouter.py
tests/evals/: test_metrics.py
tests/executor/: test_beam.py  test_cache.py  test_errors.py  test_loop.py
