[project]
name = "autoformalizer"
version = "0.1.0"
description = "Lean autoformalization research toolkit."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Autoformalizer Team" }
]
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.7.0",
  "rich>=13.7.1",
  "httpx>=0.27.0",
  "pyyaml>=6.0.1",
  "tqdm>=4.66.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.5",
  "pyrefly>=0.5.0"
]

[project.scripts]
autoformalize = "autoformalizer.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.5",
  "pyrefly>=0.5.0"
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.format]
line-ending = "lf"
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "N",
  "S",
  "C4",
  "RUF"
]
ignore = [
  "S101"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
